--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,8 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <!--追加_map-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtaRVwtOhGlrYvOAJ1MWfieo6WKhcJN0U"></script>
 </head>
 <body>
   <script>
